--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <title>Hangman</title>
-  <link rel="stylesheet" href="assets/style.css" type="text/css">
+  <link rel="stylesheet" href="assets/css/reset.css" type="text/css">
+  <link rel="stylesheet" href="assets/css/style.css" type="text/css">
   </head>
   <body>
-    
+    <header>
+      <h1>Hangman</h1>
+    </header>
   </body>
 </html>
